# exploration

./: .gitignore  .gitmodules  README.md
cpp/PcapPlusPlus/: CMakeLists.txt  README.md
cpp/PcapPlusPlus/include/: PacketAnalyzer.h  PacketUtils.h
cpp/PcapPlusPlus/src/: PacketAnalyzer.cpp  PacketUtils.cpp  main.cpp
cpp/benchmark/: CMakeLists.txt  README.md
cpp/benchmark/include/: BenchmarkConfig.h  BenchmarkRunner.h  CsvExporter.h  Statistics.h
cpp/benchmark/src/: BenchmarkConfig.cpp  BenchmarkRunner.cpp  CsvExporter.cpp  Statistics.cpp
cpp/interval_map/: README.md  main.cpp
cpp/json/: Dockerfile  Makefile  README.md  TASK.md
cpp/json/benchmark/: CMakeLists.txt
cpp/json/benchmark/src/: access_benchmark.cpp  parse_benchmark.cpp  serialize_benchmark.cpp
cpp/json/lib/: redis-extended  redis-plus-plus
cpp/json/poc/: CMakeLists.txt
cpp/json/poc/demo_files/: config.json
cpp/json/poc/src/: json_routines.cpp  json_routines.h  poc_main.cpp
cpp/json/test/: CMakeLists.txt
cpp/json/test/src/: basic_example.cpp
cpp/redis-cpp/: Dockerfile  Makefile  README.md
cpp/redis-cpp/benchmark/: CMakeLists.txt
cpp/redis-cpp/benchmark/src/: decr_benchmark.cpp  del_benchmark.cpp  exists_benchmark.cpp  expire_benchmark.cpp  get_benchmark.cpp  hget_benchmark.cpp  hmget_benchmark.cpp  hmset_benchmark.cpp  hset_benchmark.cpp  incr_benchmark.cpp  lpop_benchmark.cpp  lpush_benchmark.cpp  pub_benchmark.cpp  rpop_benchmark.cpp  rpush_benchmark.cpp  sadd_benchmark.cpp  scard_benchmark.cpp  set_benchmark.cpp  sismember_benchmark.cpp  smembers_benchmark.cpp  sub_benchmark.cpp  ttl_benchmark.cpp
cpp/redis-cpp/src/: basic_example.cpp
cpp/redis-cpp/test/: CMakeLists.txt
cpp/redis-plus-plus/: Dockerfile  Makefile  README.md  TASK.md
cpp/redis-plus-plus/benchmark/: CMakeLists.txt
cpp/redis-plus-plus/benchmark-time/: CMakeLists.txt
cpp/redis-plus-plus/benchmark-time/include/: BenchmarkConfig.h  CsvExporter.h  PublishBenchmark.h  PublishSizeBenchmark.h  Statistics.h  SubscribeBenchmark.h  SubscribeSizeBenchmark.h
cpp/redis-plus-plus/benchmark-time/src/: CsvExporter.cpp  PublishBenchmark.cpp  PublishSizeBenchmark.cpp  Statistics.cpp  SubscribeBenchmark.cpp  SubscribeSizeBenchmark.cpp  main.cpp
cpp/redis-plus-plus/benchmark/src/: decr_benchmark.cpp  del_benchmark.cpp  exists_benchmark.cpp  expire_benchmark.cpp  get_benchmark.cpp  hget_benchmark.cpp  hmget_benchmark.cpp  hmset_benchmark.cpp  hset_benchmark.cpp  incr_benchmark.cpp  lpop_benchmark.cpp  lpush_benchmark.cpp  pub_benchmark.cpp  rpop_benchmark.cpp  rpush_benchmark.cpp  sadd_benchmark.cpp  scard_benchmark.cpp  set_benchmark.cpp  sismember_benchmark.cpp  smembers_benchmark.cpp  sub_benchmark.cpp  ttl_benchmark.cpp
cpp/redis-plus-plus/lib/: benchmark
cpp/redis-plus-plus/lib/redis-extended/: CMakeLists.txt  Logging.cpp  Logging.h  RedisChannelManager.cpp  RedisChannelManager.h  RedisKeyManager.cpp  RedisKeyManager.h
cpp/redis-plus-plus/poc/: CMakeLists.txt
cpp/redis-plus-plus/poc-pub-sub/: CMakeLists.txt
cpp/redis-plus-plus/poc-pub-sub/src/: main.cpp  pubsub_routines.cpp  pubsub_routines.h
cpp/redis-plus-plus/poc/src/: Logging.h  RedisLock.cpp  RedisLock.h  poc_main.cpp  poc_routines.cpp  poc_routines.h  redis_operations.cpp  redis_operations.h
cpp/redis-plus-plus/test/: CMakeLists.txt
cpp/redis-plus-plus/test/src/: basic_example.cpp
tools/benchmark/: calculate_averages.py  generate_graph.py
tools/redis/: Makefile  redis.conf
